--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
         "@material-ui/icons": "^4.2.1",
         "d3-shape": "^1.3.5",
         "deck.gl": "^7.1.7",
+        "node-ti": "git+ssh://git@github.com:wasson-ece/node-ti.git",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.0.3",
