--- a/package.json
+++ b/package.json
@@ -133,12 +133,14 @@
     "dependencies": {
         "@material-ui/core": "^4.1.3",
         "@material-ui/icons": "^4.2.1",
+        "@types/react-router-dom": "^4.3.4",
         "d3-shape": "^1.3.5",
         "deck.gl": "^7.1.7",
         "node-ti": "git+ssh://git@github.com:wasson-ece/node-ti.git",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.0.3",
+        "react-router-dom": "^5.0.1",
         "react-vis": "^1.11.7",
         "redux": "^4.0.1",
         "roboto-fontface": "^0.10.0",
