--- a/package.json
+++ b/package.json
@@ -136,6 +136,8 @@
         "@types/react-router-dom": "^4.3.4",
         "d3-shape": "^1.3.5",
         "deck.gl": "^7.1.7",
+        "influx": "^5.4.0",
+        "ini": "^1.3.5",
         "node-ti": "git+ssh://git@github.com:wasson-ece/node-ti.git",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
