--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "dependencies": {
         "@material-ui/core": "^4.1.3",
         "@material-ui/icons": "^4.2.1",
+        "@sentry/electron": "^0.17.3",
         "@types/react-router-dom": "^4.3.4",
         "d3-shape": "^1.3.5",
         "deck.gl": "^7.1.7",
