--- a/package.json
+++ b/package.json
@@ -133,10 +133,12 @@
     "dependencies": {
         "@material-ui/core": "^4.1.3",
         "@material-ui/icons": "^4.2.1",
+        "@sentry/cli": "^1.47.1",
         "@sentry/electron": "^0.17.3",
         "@types/react-router-dom": "^4.3.4",
         "d3-shape": "^1.3.5",
         "deck.gl": "^7.1.7",
+        "electron-download": "^4.1.1",
         "influx": "^5.4.0",
         "ini": "^1.3.5",
         "node-ti": "git+ssh://git@github.com:wasson-ece/node-ti.git",
