--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
         "@sentry/cli": "^1.47.1",
         "@sentry/electron": "^0.17.3",
         "@types/react-router-dom": "^4.3.4",
+        "clsx": "^1.0.4",
         "d3-shape": "^1.3.5",
         "deck.gl": "^7.1.7",
         "electron-download": "^4.1.1",
